examples/test/testpolicy5537.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5537
  namespace: namespace123
spec:
  podSelector:
    matchLabels:
      key11: value21
      key49: value17
      key24: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value41
      podSelector:
        matchLabels:
          key13: value10
